--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <section class="hero-image">
      <div class="container">
-       <h1 class="heading">Эльдар Дусмуратов</h1>
-       <p>Junior верстальщик</p>
+       <h1 class="heading">Eldar Dusmuratov</h1>
+       <p>Senior developer</p>
      </div> 
     </section>
 
